--- a/gateway/src/main/resources/bootstrap.yml
+++ b/gateway/src/main/resources/bootstrap.yml
@@ -1,6 +1,11 @@
 spring:
   application:
     name: gateway
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1.0   #链路收集比率 生产环境需修改此参数
   cloud:
     config:
       discovery:
